# Yui-native

./: .gitignore  .gitmodules  CHANGELOG.MD  CMakeLists.txt  Dockerfile  package.json  pnpm-lock.yaml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: release.yaml
src/: main.cc  preload.cc  qbar.cc  qbar.def  qqnt.cc  qqnt.def
src/db/: group_msg_table.cc
src/disasm/: custom_disasm.cc
src/hook/: hook.cc  linux_hook.cc  windows_hook.cc
src/include/: convert.hh  disasm.hh  handle.hh  hook.hh  install.hh  linux_hook.hh  msf_worker.hh  native_hosts.hh  native_msf.hh  native_stmt.hh  windows_hook.hh
src/include/db/: group_msg_table.hh
src/include/db/model/: group_msg_table.hh
src/include/nt/: element.hh  message.hh
src/include/nt_sqlite3/: func.hh  sqlite3.hh  vdbe.hh
src/include/sqlite3/: base.hh  sqlite3.hh
src/include/sqlite3/nt/: base.hh  sqlite3.hh  vdbe.hh
src/include/sqlite3/official/: base.hh  sqlite3.hh  vdbe.hh
src/install/: hook_hosts.cc  hook_msf.cc  hook_stmt.cc
src/preload/: CMakeLists.txt  preload.cc
src/proto/: communication.pb.cc  communication.pb.h  make.sh  message.pb.cc  message.pb.h  search.pb.cc  search.pb.h
src/proto/data/: communication.proto  message.proto  poke.proto  search.proto
src/qqnt/: CMakeLists.txt  qqnt.cc  qqnt.def
src/test/: test_sqlite3.cc  test_sqlite3.hh
src/yui/: handle.cc  hosts.cc  msf_task.cc  msf_worker.cc  stmt.cc
src/yukihana/: convert.cc  handle.cc
test/: config.yaml  qq.sh  sqlite3.cc  test.c  test.cc  test.db  test.js  test.sql  test_orm.cc  test_preload.cc  test_protobuf.cc  test_sqlite3.cc
test/meta/: NODE-EXPORT clean.txt  NODE-EXPORT.txt  QBar-EXPORT.txt  QBar-IMPORT.txt  QQNT-EXPORT clean.txt  QQNT-EXPORT.txt  WRAPPER-IMPORT.txt
tools/: check.js  decrypt-db.sh  generate_def_from_export.js  ida_server.sh  sqlite3_fix.js  sqlite3_getfunc.js
tools/linux/: build.sh  ci.sh  decrypt-db.sh  docker-build-github.sh  docker-build.sh  ida_server.sh  proto_make.sh  proto_print.sh  protobuf.sh  start.sh
tools/windows/: ci.ps1  decrypt-db.ps1  download_lib.js  make_proto.ps1  proto_make.ps1  proto_print.ps1
